<resources>
    <string name="app_name">RandomRiding</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="test">아니뭔데이거</string>
    <string name="finish">FINISH</string>
    <string name="start">START</string>
    <string name="_00">00</string>
    <string name="sc">:</string>
    <string name="km">km</string>
    <string name="md">이동 거리 :</string>
    <string name="km_h">km/h</string>
    <string name="vel">속도 :</string>
    <string name="avgvel">평균 속도 :</string>
    <string name="remd">남은 거리 :</string>
</resources>