<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MapsActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:foregroundGravity="left|center"
                    android:text="@string/vel"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/MyVelocity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textStyle="bold"
                    tools:text="현재속도" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/km_h"
                    android:textSize="8sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/md"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/Mydistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/km"
                    android:textSize="8sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/hour"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textStyle="bold"
                    tools:text="시" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sc"
                    tools:text=":" />

                <TextView
                    android:id="@+id/min"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textStyle="bold"
                    tools:text="분" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sc"
                    tools:text=":" />

                <TextView
                    android:id="@+id/sec"
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textStyle="bold"
                    tools:text="초" />

                <TextView
                    android:id="@+id/millisec"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textSize="8sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avgvel"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/avgvelocity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textStyle="bold"
                    tools:text="평속" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/km_h"
                    android:textSize="8sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remd"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/RemDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00"
                    android:textStyle="bold"
                    tools:text="남은거리" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/km"
                    android:textSize="8sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/DestButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start"
                    android:textColor="#FFFFFF"
                    app:backgroundTint="@color/color_nav_back" />

                <CheckBox
                    android:id="@+id/MylocCheckBox"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:foreground="@drawable/defaultmarker_c" />

                <CheckBox
                    android:id="@+id/MydestCheckBox"
                    android:layout_width="68dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:foreground="@drawable/flag_c" />

                <Button
                    android:id="@+id/EndButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="false"
                    android:text="@string/finish"
                    android:textColor="#FFFFFF"
                    app:backgroundTint="@color/color_nav_back" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible" />
            </RelativeLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f2f2f2"
            android:elevation="1dp"
            android:visibility="invisible"
            tools:visibility="invisible" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            app:itemBackground="@color/color_nav_back"

            app:itemIconTint="@drawable/menu_selector_color"
            app:itemTextColor="@color/design_default_color_background"
            app:menu="@menu/my_navigation_items"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="670dp" />

    </RelativeLayout>

</layout>
